# haskellifi-trayicon

./: Interface.glade  LICENSE  README.md  Setup.hs  haskellifi-trayicon.cabal
src/Controller/: ConditionDirection.hs  Conditions.hs
src/Controller/Conditions/: Clear.hs  Icon.hs  PopupMenu.hs  Quit.hs  WifiListMenu.hs  WifiListPoll.hs  WifiListSync.hs
src/Crypto/: DefaultTelefonicaPassword.hs
src/Model/: Model.hs  ProtectedModel.hs  ReactiveModel.hs
src/Model/ProtectedModel/: Initialisation.hs  WifiList.hs
src/Model/ReactiveModel/: Initialisation.hs  ModelEvents.hs  WifiList.hs
src/Network/NetworkManager/: Wifi.hs
src/Network/Wifi/: Iwconfig.hs
src/View/: Objects.hs
