-- Copyright   : (C) Ivan Perez trading as Keera Studios, 2012
-- License     : BSD3
-- Maintainer  : support@keera.co.uk
--
cabal-version: >= 1.10
build-type:          Custom

name:                haskellifi-trayicon
version:             0.0.1
author:              Ivan Perez
maintainer:          ivan.perez@keera.co.uk
homepage:            http://keera.co.uk/projects/haskellifi-trayicon
license:             BSD3
license-file:        LICENSE
category:            Text
synopsis:            Detect wifis and suggest predefined passwords
stability:           Provisional
data-files:
    data/wifi.png
  , Interface.glade


-- You can disable the hlint test suite with -f-test-hlint
flag test-hlint
  default: False
  manual: True

-- You can disable the haddock coverage test suite with -f-test-doc-coverage
flag test-doc-coverage
  default: False
  manual: True


executable haskellifi-trayicon

  main-is:
    Main.hs

  build-depends:
      base >= 4.0
    , glade
    , glib
    , gtk
    , hails
    , HSH
    , IfElse
    , MissingH
    , mtl
    , parsec
    , safe

  default-language:
    Haskell2010

  hs-source-dirs:
    src/

  if os(windows)
   ghc-options:
     -threaded -Wall -fno-warn-unused-do-bind -O2 -optl-mwindows
  else
   ghc-options:
     -threaded -Wall -fno-warn-unused-do-bind -O2


test-suite hlint

  type:
    exitcode-stdio-1.0

  main-is:
    hlint.hs

  hs-source-dirs:
    tests

  if !flag(test-hlint)
    buildable:
      False
  else
    build-depends:
        base
      , hlint >= 1.7

-- Verify that the code is thoroughly documented
test-suite haddock-coverage

  type:
    exitcode-stdio-1.0

  main-is:
    HaddockCoverage.hs

  hs-source-dirs:
    tests

  ghc-options:
    -Wall

  if !flag(test-doc-coverage)
    buildable:
      False
  else
    build-depends:
        base >= 4 && < 5
      , directory
      , filepath
      , process
      , regex-posix
